After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 684366 - The load button theming is broken in RTL environments
The load button theming is broken in RTL environments
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Interface
3.5.x
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-19 09:45 UTC by Claudio Saavedra
Modified: 2012-12-15 10:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ephy-toolbar: fix the toolbar in RTL environments (3.21 KB, patch)
2012-12-14 20:28 UTC, Claudio Saavedra
committed Details | Review

Description Claudio Saavedra 2012-09-19 09:45:34 UTC
Run LANG=ar_SA epiphany and see how terrible it looks.
Comment 1 Claudio Saavedra 2012-09-19 12:14:50 UTC
Moving to gnome-themes-standard and adding Lapo to the CC, I think he has already a patch that improves this a lot.
Comment 2 Lapo Calamandrei 2012-09-19 15:17:35 UTC
Theming issues fixed, since the toolbar is a mess still moving back to ephy :-)
Comment 3 Claudio Saavedra 2012-12-14 20:28:01 UTC
Created attachment 231591 [details] [review]
ephy-toolbar: fix the toolbar in RTL environments
Comment 4 Xan Lopez 2012-12-15 10:25:02 UTC
Review of attachment 231591 [details] [review]:

OK.