ephy-toolbar: fix the toolbar in RTL environments

https://bugzilla.gnome.org/show_bug.cgi?id=684366